--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,9 @@ dependencies {
 	
 	//jdbc로그
 	implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
+
+	//
+	implementation 'com.google.code.gson:gson:2.8.5' //자바측 json변환 lib
 	
 }
 
